--- a/index.html
+++ b/index.html
@@ -73,35 +73,38 @@
       <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
       <script>
-         var swiper = new Swiper('.swiper', {
-            freeMode: true,
-            pagination: {
-               el: '.swiper-pagination',
-               clickable: true,
-            },
-            breakpoints: {
-               250: {
-                  slidesPerView: 1,
-                  spaceBetween: 10,
+         if (window.innerWidth < 768) {
+            const swiper = new Swiper('.swiper', {
+               freeMode: true,
+               pagination: {
+                  el: '.swiper-pagination',
+                  clickable: true,
                },
-               320: {
-                  slidesPerView: 1.3,
-                  spaceBetween: 15,
+               breakpoints: {
+                  250: {
+                     slidesPerView: 1,
+                     spaceBetween: 10,
+                  },
+                  320: {
+                     slidesPerView: 1.3,
+                     spaceBetween: 15,
+                  },
+                  500: {
+                     slidesPerView: 2,
+                     spaceBetween: 20,
+                  },
+                  600: {
+                     slidesPerView: 2.5,
+                     spaceBetween: 25,
+                  },
+                  760: {
+                     slidesPerView: 3,
+                     spaceBetween: 30,
+                  },
                },
-               500: {
-                  slidesPerView: 2,
-                  spaceBetween: 20,
-               },
-               600: {
-                  slidesPerView: 2.5,
-                  spaceBetween: 25,
-               },
-               760: {
-                  slidesPerView: 3,
-                  spaceBetween: 30,
-               },
-            },
-         });
+            });
+         }
+
          function show() {
             document.querySelector('.content__hidden_more').style.display = 'none';
             document.querySelector('.content__hidden_less').style.display = 'flex';
